<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">骂完就删</string>
    <string name="placeholder_text">想骂就骂，这里不会记住任何东西</string>
    <string name="hint_text">内容只存在于当前页面</string>
    <string name="emotion_name_hint">给这股情绪起个名字（可选）</string>
    <string name="button_initial">开始释放</string>
    <string name="button_close">关闭</string>
    <string name="release_hint">点得越快，释放得越充分</string>
    <string name="finish_release">完成释放</string>
    <string name="disappeared">已经消失了</string>
    <string name="undo_hint">如果你还没准备好，它还在</string>
    <string name="onboarding_line1">你写下的任何内容</string>
    <string name="onboarding_line2">都不会被保存</string>
    <string-array name="profanity_library">
        <item>艹尼马</item>
        <item>你TM有病</item>
        <item>让你TM画饼</item>
        <item>让你PUA我</item>
        <item>干你妈</item>
        <item>霸王龙徒手捏爆你妈的行星</item>
        <item>CNM</item>
        <item>CTMD</item>
        <item>CNND</item>
    </string-array>
</resources>
